--- a/Lektion4/twitterEx/twitterStyle.css
+++ b/Lektion4/twitterEx/twitterStyle.css
@@ -10,6 +10,7 @@ body {
     justify-content: center;
     /* place-items: center; */
     overflow: hidden;
+    text-align: center;
 }
 .container {
     position: relative;
@@ -34,4 +35,48 @@ body {
     font-weight: 900;
     color: #1da1f2;
     letter-spacing: 1px;
+}
+.inputs {
+    text-align: left;
+    margin-top: 30px;
+}
+label, input, button {
+    display: block;
+    width: 100%;
+    padding: 0;
+    border: none;
+    outline: none;
+    box-sizing: border-box;
+}
+label {
+    margin-bottom: 5px;
+}
+input::placeholder {
+    color: gray;
+}
+input {
+    background: #ecf0f3;
+    padding: 10px;
+    padding-left: 20px;
+    height: 50px;
+    box-shadow: inset 6px 6px 6px #cbced1, -6px -6px 6px white;
+    font-size: 15px;
+    border-radius: 50px;
+}
+button {
+    box-shadow: 6px 6px 6px #cbced1, -6px -6px 6px white;
+    color: white;
+    margin-top: 20px;
+    background: #1da1f2;
+    height: 40px;
+    border-radius: 20px;
+    font-weight: 900;
+    cursor: pointer;
+    transition: 0.5;
+}
+button:hover {
+    box-shadow: none;
+}
+label:nth-of-type(2) {
+    margin-top: 12px;
 }
