--- a/Retro/nav_meny.css
+++ b/Retro/nav_meny.css
@@ -17,7 +17,7 @@ html, body {
     padding: 1em;
 }
 .menu-button-container {
-    /* display: none; */
+    display: none; 
     height: 100%;
     width: 30px;
     cursor: pointer;
@@ -55,4 +55,56 @@ html, body {
 #menu-toggle:checked + .menu-button-container .menu-button::after {
     margin-top: 0px;
     transform: rotate(-45deg);
+}
+.menu {
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+.menu li {
+    margin: 0 1rem;
+    overflow: hidden;
+}
+
+@media (max-width:700px) {
+    .menu-button-container {
+        display: flex;
+    }
+    .menu {
+        position: absolute;
+        top: 0;
+        left: 0;
+        flex-direction: column;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        margin-top: 50px;
+    }
+    .menu > li {
+        display: flex;
+        justify-content: center;
+        margin: 0;
+        padding: 0 0;
+        width: 100%;
+        background-color: rgb(254, 175, 129);
+        color: white;
+    }
+    #menu-toggle ~ .menu li {
+        height: 0;
+        margin: 0;
+        padding: 0;
+        border: 0;
+        transition: height 700ms cubic-bezier(0.23,1,0.32,1);
+    }
+    #menu-toggle:checked ~ .menu li {
+        border: 1px solid #333;
+        height: 2.5em;
+        padding: 0.5em;
+        transition: height 700ms cubic-bezier(0.23,1,0.32,1);
+    }
+    .menu > li:not(:last-child){
+        border-bottom: 1px solid rgba(222, 171, 99, 0.339);
+    }
 }
