--- a/netflix_clone/style.css
+++ b/netflix_clone/style.css
@@ -57,3 +57,58 @@ body {
     z-index: 1;
     background: linear-gradient(to top, #000, transparent);
 }
+.banner .fit {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+}
+.banner .box {
+    position: absolute;
+    transform: translate(-50, 50%);
+    z-index: 10000;
+}
+.banner .box .heading {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.banner .box .heading h2 {
+    font-size: 3rem;
+    color: white;
+    letter-spacing: 2px;
+}
+.banner .box .heading h5 {
+    font-size: 1.5rem;
+    color: white;
+    font-weight: 400;
+    padding: 1rem 0;
+}
+.banner .box .heading p {
+    font-size: 1.2rem;
+    color: white;
+    font-weight: 500;
+    padding: 15px 0;
+    padding-bottom: 20px;
+}
+.banner .box .search {
+    font-size: 16px;
+    border: 1px solid #8c8c8c;
+    outline: none;
+    color: #000;
+    border-radius: 2px;
+    padding: 0 0 0 20px;
+    min-width: 400px;
+    height: 60px;
+    align-items: center;
+}
+.banner .box .search input {
+
+}
+.banner .box .search a {
+    
+}
