--- a/netflix_clone/style.css
+++ b/netflix_clone/style.css
@@ -96,6 +96,12 @@ body {
     padding-bottom: 20px;
 }
 .banner .box .search {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.banner .box .search input {
     font-size: 16px;
     border: 1px solid #8c8c8c;
     outline: none;
@@ -105,10 +111,48 @@ body {
     min-width: 400px;
     height: 60px;
     align-items: center;
-}
-.banner .box .search input {
-
+    margin-right: 10px;
 }
 .banner .box .search a {
-    
+    text-decoration: none;
+    text-transform: uppercase;
+    color:#fff;
+    font-weight: 400;
+    letter-spacing: 0.1px;
+    border-radius: 2px;
+    background: #e50914;
+    padding: 0px 30px;
+    line-height: 60px;
+    min-width: 310px ;
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.45);
+    font-size: 1.625rem;
+    text-align: center;
+}
+.part1, .part2, .part3 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    padding: 2rem 4rem;
+    border-bottom: 0.6rem solid #111;
+}
+.talk {
+    width: 40%;
+}
+.talk h1 {
+    font-size: 3.3rem;
+    color: #fff;
+    letter-spacing: 2px;
+    padding-bottom: 10px;
+}
+.talk p {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.5rem;
+    color: #fff;
+}
+.img {
+    width: 45%;
+}
+.img img {
+    width: 100%;
 }
