--- a/netflix_clone/style.css
+++ b/netflix_clone/style.css
@@ -47,6 +47,7 @@ body {
     z-index: 1;
     background: linear-gradient(to bottom, #000, transparent);
 }
+/* Skugga nedan */
 .banner:after {
     content: '';
     position: absolute;
