--- a/netflix_clone/style.css
+++ b/netflix_clone/style.css
@@ -258,3 +258,56 @@ body {
 .footer .one li a:hover, .two li a:hover, .three li a:hover, .four li a:hover {
   border-bottom: 1px solid #ccc;
 }
+
+.banner2 {
+    border-bottom: 0.6rem solid #111;
+}
+.banner2 .box {
+    margin: 4rem;
+}
+
+.banner2 .box .heading {
+    display: flex; 
+    flex-direction: column;
+    color: #fff;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.banner2 .box .heading p {
+    font-size: 1.2rem;
+    font-weight: 500;
+    padding: 15px 0;
+    padding-bottom: 20px;
+}
+.banner2 .box .search {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.banner2 .box .search input {
+    font-size: 16px;
+    border: 1px solid #877c7c;
+    outline: none;
+    color: #000;
+    border-radius: 2px;
+    height: 60px;
+    min-width: 600px;
+    padding: 0 0 0 20px;
+    align-items: center;
+}
+.banner2 .box .search a {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #fff;
+    background: #d60a15;
+    font-weight: 400;
+    letter-spacing: 0.1px;
+    border-radius: 2px;
+    min-width: 210px;
+    line-height: 60px;
+    padding: 0 30px;
+    font-size: 1.5rem;
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.45);
+}
