--- a/netflix_clone/style.css
+++ b/netflix_clone/style.css
@@ -224,17 +224,10 @@ body {
     padding: 4rem 0;
     margin: auto;
 }
-.footer .one {
+.footer .one,.footer .two, .footer .three, .footer .four {
     display: flex;
-    justify-content: space-between;
-    padding: 4rem 4rem;
-    margin: auto;
-    width: 25%;
-}
-.footer .two, .footer .three, .footer .four {
-      display: flex;
-    justify-content: space-between;
-    padding: 4rem 0;
+    justify-content: space-around;
+    padding: 2rem 0;
     margin: auto;
     width: 25%;
 }
@@ -251,11 +244,11 @@ body {
     padding: 7px 0;
 }
 
-.footer .one li a, .two li a, .three li a, .four li a {
+.footer .one li a, .footer .two li a, .footer .three li a, .footer .four li a {
     color: #fff;
     text-decoration: none;
 }
-.footer .one li a:hover, .two li a:hover, .three li a:hover, .four li a:hover {
+.footer .one li a:hover, .footer .two li a:hover, .footer .three li a:hover, .footer .four li a:hover {
   border-bottom: 1px solid #ccc;
 }
 
@@ -312,6 +305,63 @@ body {
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.45);
 }
 @media screen and (max-width:768px) {
+     .container .head {
+        padding: 20px 50px;
+    }
+
+    .container .head img {
+        width: 20%;
+    }
+
+    .banner .box .heading h2 {
+        font-size: 3rem;
+        letter-spacing: 1.5px;
+        width: 100%;
+    }
+    .banner .box .heading h5 {
+        font-size: 1.4rem;
+        padding: 0.8rem 0;
+    }
+    .banner .box .heading p {
+        font-size: 1.1rem;
+        padding: 13px 0;
+        padding-bottom: 17px;
+    }
+
+    .banner .box .search {
+        flex-direction: column;
+    }
+
+    .banner .box .search input {
+        min-width: 310px;
+        margin-bottom: 20px;
+    }
+
+    .part1, .part2, .part3 {
+        flex-direction: column-reverse;
+        justify-content: center;
+        padding: 2rem 1rem;
+        text-align: center;
+    }
+
+    .part1 .text, .part2 .text, .part3 .text {
+        width: 80%;
+        margin: 20px 0 30px 0;
+    }
+
+    .part1 .text h1, .part2 .text h1, .part3 .text h1 {
+        font-size: 3.2rem;
+        letter-spacing: 1.5px;
+        padding-bottom: 5px;
+    }
+
+    .part1 .talk p, .part2 .talk p, .part3 .talk p {
+        font-size: 1.5rem;
+    }
+    .part1 .img, .part2 .img, .part3 .img {
+        width: 80%;
+    }
+
     .footer {
         flex-direction: column;
     }
