YTClone - search och img style

--- a/YTClone/css/headerStyle.css
+++ b/YTClone/css/headerStyle.css
@@ -17,6 +17,14 @@ div.left-section {
     display: flex;
     align-items: center;
 }
+div.middle-section {
+    display: flex;
+    flex: 1;
+    align-items: center;
+    max-width: 500px;
+    margin-left: 75px;
+    margin-right: 35px;
+}
 img.hamburger-menu {
     height: 26px;
     margin-left: 24px;
@@ -24,4 +32,20 @@ img.hamburger-menu {
 }
 img.youtube-logo {
     height: 70px;
+}
+img.hamburger-menu:hover, img.youtube-logo:hover{
+    cursor: pointer;
+}
+.search-icon-container {
+    height: 40px;
+    width: 65px;
+    background-color: rgb(240, 240, 240);
+    border-color: rgb(192, 192, 192);
+    border-width: 1px;
+    margin-left: -1px;
+    margin-right: 10px;
+}
+img.search-icon{
+    height: 30px;
+    margin-bottom: 10px;
 }
