--- a/YTClone/css/headerStyle.css
+++ b/YTClone/css/headerStyle.css
@@ -59,6 +59,7 @@ img.youtube-apps-icon,
 img.notifications-icon {
     height: 30px;
     margin-bottom: 10px;
+    padding-top: 10px;
 }
 div.notifications-icon-container {
     position: relative;
@@ -88,4 +89,31 @@ img.profile-icon {
 .youtube-apps:hover div.tooltip,
 .notifications-icon-container:hover div.tooltip {
     opacity: 1;
+}
+.search-icon-container, 
+.upload-icon,
+.youtube-apps,
+.notifications-icon-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+.search-box {
+    flex:1;
+    height: 40px;
+    padding-left: 10px;
+    font-size: 16px;
+    border: 1px solid rgb(192, 192, 192);
+    border-radius: 2px;
+    box-shadow: inset 1px 2px 3px rgba(0,0,0,0.05);
+    width: 0;
+}
+/* .search-box:focus {
+    border: 1px solid rgb(192, 192, 192);
+} */
+
+.search-box::placeholder {
+    font-family: Roboto, Arial, Helvetica, sans-serif;
+    font-size: 18px;
 }
