--- a/YTClone/css/headerStyle.css
+++ b/YTClone/css/headerStyle.css
@@ -10,7 +10,7 @@
     z-index: 100;
     background-color: white;
     border-bottom-width: 1px;
-    border-style: solid;
+    border-bottom-style: solid; /*det var border-style: ; istället */
     border-bottom-color: rgb(228, 228, 228);
 }
 div.left-section {
