--- a/YTClone/css/videoGridStyle.css
+++ b/YTClone/css/videoGridStyle.css
@@ -4,6 +4,30 @@
     column-gap: 16px;
     row-gap: 20px;
 }
+@media (max-width:750px){
+    .video-grid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media (min-width:751px) and (max-width:999px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+@media (min-width:1000px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+    .video-title {
+        font-size: 18px;
+        line-height: 24px;
+    }
+    .video-stats,
+    .video-author {
+        font-size: 16px;
+    }
+
+}
 .thumbnail {
     width: 100%;
 }
