--- a/YTClone/css/general.css
+++ b/YTClone/css/general.css
@@ -12,3 +12,10 @@ p, div, a {
     text-decoration: none;
     color: black;
 }
+@media (min-width: 1200.1px) {
+    /* Använd antingen margin-left eller padding-left. Effekterna av båda är samma. */
+    body {
+        margin-left: 168px;
+        /* padding-left: 280px; */
+    } 
+}
